Tweak publication style

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,14 +2,16 @@
 ---
 
 @inproceedings{goel2022making,
+  abbr={HotNets22},
   title={Making links on your web pages last longer than you},
-  author={Ayush, Goel and Jingyuan Zhu and Harsha V. Madhyastha},
+  author={Goel, Ayush and Zhu, Jingyuan and Madhyastha, Harsha V},
   booktitle={Proceedings of the 21st ACM Workshop on Hot Topics in Networks},
   pages={145--151},
   year={2022}
 }
 
 @inproceedings{nyayachavadi2022characterizing,
+  abbr={IMC22},
   title={Characterizing "permanently dead" links on Wikipedia},
   author={Nyayachavadi, Anish and Zhu, Jingyuan and Madhyastha, Harsha V},
   booktitle={Proceedings of the 22nd ACM Internet Measurement Conference},
@@ -18,6 +20,7 @@
 }
 
 @inproceedings{goel2022jawa,
+  abbr={OSDI22},
   title={Jawa: Web Archival in the Era of $\{$JavaScript$\}$},
   author={Goel, Ayush and Zhu, Jingyuan and Netravali, Ravi and Madhyastha, Harsha V},
   booktitle={16th USENIX Symposium on Operating Systems Design and Implementation (OSDI 22)},
@@ -26,6 +29,7 @@
 }
 
 @inproceedings{chen2020cpu,
+  abbr={IISWC20},
   title={CPU microarchitectural performance characterization of cloud video transcoding},
   author={Chen, Yuhan and Zhu, Jingyuan and Khan, Tanvir Ahmed and Kasikci, Baris},
   booktitle={2020 IEEE International Symposium on Workload Characterization (IISWC)},
