Update news and new publication (tweak style)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+@inproceedings{goel2024sprinter,
+  abbr={NSDI24},
+  title={Sprinter: Speeding up High-Fidelity Crawling of the Modern Web},
+  author={Goel, Ayush and Zhu, Jingyuan and Netravali, Ravi and Madhyastha, Harsha V},
+  booktitle={21st USENIX Symposium on Networked Systems Design and Implementation (NSDI 2024)},
+  year={2024}
+}
+
+@inproceedings{Zhu2023reviving,
+  abbr={IMC23},
+  title={Reviving Dead Links on the Web with FABLE},
+  author={Zhu, Jingyuan and Nyayachavadi, Anish and Zhu, Jiangchen and Ruamviboonsuk, Vaspol and Madhyastha, Harsha V},
+  booktitle={Proceedings of the 23nd ACM Internet Measurement Conference},
+  year={2023}
+}
+
 @inproceedings{goel2022making,
   abbr={HotNets22},
   title={Making links on your web pages last longer than you},
