Update my personal website after Oct-2025

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@inproceedings{zhu2025toward,
+  abbr={IMC25},
+  title={Toward Better Efficiency vs. Fidelity Tradeoffs in Web Archives},
+  author={Zhu, Jingyuan and Sun, Huanchen and Madhyastha, Harsha V},
+  booktitle={Proceedings of the 2025 ACM Internet Measurement Conference},
+  year={2025}
+}
+
 @inproceedings{goel2024sprinter,
   abbr={NSDI24},
   title={Sprinter: Speeding up High-Fidelity Crawling of the Modern Web},
